@@ -5,6 +5,9 @@ vim-addon-manager (0.4.2) UNRELEASED; urgency=low
     - Update Vcs-* fields to point to git
     - Remove vim-tiny from Recommends since it's lacking +eval which most
       addons need.
+  * Rename amend sub-command to enable.  Leave amend as an undocumented
+    command for a little while for people that are used to the old name.
+    (Closes: #501439)
 
  -- James Vega <jamessan@debian.org>  Fri, 24 Jul 2009 19:56:48 +0200
 
